--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11435,7 +11435,13 @@ input.form-control:focus, input[type=text]:focus, input[type=password]:focus, in
   text-transform: capitalize;
   color: var(--color-main);
 }
-
+.title::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-main);
+}
 
 .float-image {
   max-width: 550px;
@@ -11646,15 +11652,6 @@ a.nav-link:hover::after {
 
 .navbar img {
   max-width: 160px;
-}
-
-.home-calculator {
-    padding: 4rem 0;
-    text-align: center;
-}
-.home-calculator p {
-    padding: 1rem 0;
-    text-align: justify;
 }
 
 /********** PAGES HEADER **********/
@@ -11912,12 +11909,6 @@ a.nav-link:hover::after {
   width: 100%;
 }
 
-/********* CONTACT *********/
-
-.slide-image{
-    clip-path: ellipse(150% 100% at 50% 0);
-}
-
 /********* FOOTER *********/
 .footer-top {
   padding: 1rem 0;
@@ -12019,4 +12010,7 @@ a.nav-link:hover::after {
   html {
     font-size: 13px;
   }
+}
+.icon-user-experience:before {
+  content: "\e900";
 }
