--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11435,12 +11435,8 @@ input.form-control:focus, input[type=text]:focus, input[type=password]:focus, in
   text-transform: capitalize;
   color: var(--color-main);
 }
-.title::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 3px;
-  background-color: var(--color-main);
+.slide-image{
+    clip-path: ellipse(150% 100% at 50% 0);
 }
 
 .float-image {
