--- a/resources/sass/website/style.scss
+++ b/resources/sass/website/style.scss
@@ -108,13 +108,6 @@ input {
     text-transform: capitalize;
     color: var(--color-main);
 
-    &::after {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 3px;
-        background-color: var(--color-main);
-    }
 }
 
 .float-image {
@@ -743,11 +736,13 @@ a.nav-link {
     html {
         font-size: 13px;
     }
-
     //.advantages-title, .advantages-text {
     //    width: 100%;
     //    padding: 1rem;
     //}
 }
 
+.slide-image{
+    clip-path: ellipse(150% 100% at 50% 0);
+}
 
