--- a/resources/sass/website/style.scss
+++ b/resources/sass/website/style.scss
@@ -178,7 +178,7 @@ a.nav-link {
     vertical-align: 0.255em;
     font: 10px "Font Awesome 5 Pro", serif;
     content: "\f078";
-    color: var(--color-white);
+    color: var(--color-black);
 }
 
 .breadcrumb {
