--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:  url('/assets/fonts/icomoon.eot');
-    src:  url('/assets/fonts/icomoon.eot') format('embedded-opentype'),
-    url('/assets/fonts/icomoon.ttf') format('truetype'),
-    url('/assets/fonts/icomoon.woff') format('woff'),
-    url('/assets/fonts/icomoon.svg') format('svg');
+    src:  url('/assets/fonts/icomoon.eot?khqkmc');
+    src:  url('/assets/fonts/icomoon.eot?khqkmc#iefix') format('embedded-opentype'),
+    url('/assets/fonts/icomoon.ttf?khqkmc') format('truetype'),
+    url('/assets/fonts/icomoon.woff?khqkmc') format('woff'),
+    url('/assets/fonts/icomoon.svg?khqkmc#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -25,6 +25,12 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-call-center-1:before {
+    content: "\e906";
+}
+.icon-call-center:before {
+    content: "\e907";
+}
 .icon-zeng:before {
     content: "\e905";
 }
