--- a/resources/sass/website/style.scss
+++ b/resources/sass/website/style.scss
@@ -732,6 +732,13 @@ a.nav-link {
     }
 }
 
+@media (min-width: 992px) {
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+        font-size: 15px;
+    }
+}
 @media (max-width: 768px) {
     html {
         font-size: 13px;
