--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11984,7 +11984,7 @@ a.nav-link:hover::after {
     max-width: max-content;
   }
 }
-@media (min-width: 992px) {
+@media (max-width: 1200px) {
   .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
