--- a/resources/sass/website/style.scss
+++ b/resources/sass/website/style.scss
@@ -732,7 +732,7 @@ a.nav-link {
     }
 }
 
-@media (min-width: 992px) {
+@media (max-width: 1200px) {
     .navbar-expand-lg .navbar-nav .nav-link {
         padding-right: 0.5rem;
         padding-left: 0.5rem;
