--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:  url('/assets/fonts/icomoon.eot?khqkmc');
-    src:  url('/assets/fonts/icomoon.eot?khqkmc#iefix') format('embedded-opentype'),
-    url('/assets/fonts/icomoon.ttf?khqkmc') format('truetype'),
-    url('/assets/fonts/icomoon.woff?khqkmc') format('woff'),
-    url('/assets/fonts/icomoon.svg?khqkmc#icomoon') format('svg');
+    src:  url('/assets/fonts/icomoon.eot?i74vc');
+    src:  url('/assets/fonts/icomoon.eot?i74vc#iefix') format('embedded-opentype'),
+    url('/assets/fonts/icomoon.ttf?i74vc') format('truetype'),
+    url('/assets/fonts/icomoon.woff?i74vc') format('woff'),
+    url('/assets/fonts/icomoon.svg?i74vc#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -25,6 +25,9 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-tel:before {
+    content: "\e908";
+}
 .icon-call-center-1:before {
     content: "\e906";
 }
