--- a/resources/sass/website/style.scss
+++ b/resources/sass/website/style.scss
@@ -708,6 +708,25 @@ a.nav-link {
     color: #99cd08;
     cursor: pointer;
 }
+.header-logo {
+    margin-left: 115px;
+}
+.header-whatsapp{
+    margin-right: 15px;
+}
+
+.header-icons {
+    margin-right: 113px;
+    color: #111f6e;
+}
+
+.header-call {
+    margin-right: 65px;
+}
+
+.head-lang {
+    margin-left: 20px;
+}
 
 /********* MEDIA QUERY *********/
 @media (min-width: 768px) {
