--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11963,6 +11963,27 @@ a.nav-link:hover::after {
   cursor: pointer;
 }
 
+.header-logo {
+  margin-left: 115px;
+}
+
+.header-whatsapp {
+  margin-right: 15px;
+}
+
+.header-icons {
+  margin-right: 113px;
+  color: #111f6e;
+}
+
+.header-call {
+  margin-right: 65px;
+}
+
+.head-lang {
+  margin-left: 20px;
+}
+
 /********* MEDIA QUERY *********/
 @media (min-width: 768px) {
   #homeSlide img {
