--- a/resources/sass/website/style.scss
+++ b/resources/sass/website/style.scss
@@ -761,7 +761,7 @@ a.nav-link {
         margin-left: 110px;
     }
     .header-whatsapp {
-        margin-right: 2px;
+        margin-right: 0;
     }
 
     .header-icons {
@@ -770,7 +770,7 @@ a.nav-link {
     }
 
     .header-call {
-        margin-right: 30px;
+        margin-right: 35px;
     }
 
     .head-lang {
