--- a/resources/sass/website/style.scss
+++ b/resources/sass/website/style.scss
@@ -757,6 +757,9 @@ a.nav-link {
         padding-left: 0.5rem;
         font-size: 15px;
     }
+    .card-img-top {
+        height: 232px;
+    }
     .header-logo {
         margin-left: 110px;
     }
