--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -12012,6 +12012,10 @@ a.nav-link:hover::after {
     font-size: 15px;
   }
 
+  .card-img-top {
+    height: 232px;
+  }
+
   .header-logo {
     margin-left: 110px;
   }
