--- a/resources/sass/website/style.scss
+++ b/resources/sass/website/style.scss
@@ -784,12 +784,19 @@ a.nav-link {
     html {
         font-size: 13px;
     }
+    .card-img-top {
+        height: 304px;
+    }
     //.advantages-title, .advantages-text {
     //    width: 100%;
     //    padding: 1rem;
     //}
 }
-
+@media (max-width: 1200px) {
+    .card-img-top {
+        height: 232px;
+    }
+}
 .slide-image{
     clip-path: ellipse(150% 100% at 50% 0);
 }
