--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -12016,6 +12016,10 @@ a.nav-link:hover::after {
     height: 232px;
   }
 
+  .blog-card {
+    height: 360px;
+  }
+
   .header-logo {
     margin-left: 110px;
   }
@@ -12045,10 +12049,18 @@ a.nav-link:hover::after {
   .card-img-top {
     height: 304px;
   }
+
+  .blog-card {
+    height: 360px;
+  }
 }
 @media (max-width: 1200px) {
   .card-img-top {
     height: 232px;
+  }
+
+  .blog-card {
+    height: 360px;
   }
 }
 .slide-image {
