--- a/resources/sass/website/style.scss
+++ b/resources/sass/website/style.scss
@@ -760,6 +760,9 @@ a.nav-link {
     .card-img-top {
         height: 232px;
     }
+    .blog-card {
+        height: 360px;
+    }
     .header-logo {
         margin-left: 110px;
     }
@@ -787,6 +790,9 @@ a.nav-link {
     .card-img-top {
         height: 304px;
     }
+    .blog-card {
+        height: 360px;
+    }
     //.advantages-title, .advantages-text {
     //    width: 100%;
     //    padding: 1rem;
@@ -795,6 +801,9 @@ a.nav-link {
 @media (max-width: 1200px) {
     .card-img-top {
         height: 232px;
+    }
+    .blog-card {
+        height: 360px;
     }
 }
 .slide-image{
